# Vivid

./: .gitmodules  CMakeLists.txt  README.md  dconfig  doxyfile
.github/workflows/: build-ubuntu.yml  static.yml
assets/shaders/: basic.vertexShader.glsl  instancing.pixelShader.glsl  instancing.vertexShader.glsl  phong.pixelShader.glsl  phong.vertexShader.glsl  texture_test.pixelShader.glsl
docs/: CNAME  ECS.md
docs/doxygen/html/: annotated.html  classes.html  dir_01aa78ce2fe93d6383726aeb6438a860.js  dir_01aa78ce2fe93d6383726aeb6438a860_dep.map  dir_01aa78ce2fe93d6383726aeb6438a860_dep.md5  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_313caf1132e152dd9b58bea13a4052ca.js  dir_31b58154cf179e506e1a29dd978e5433_dep.map  dir_31b58154cf179e506e1a29dd978e5433_dep.md5  dir_3311dca86b99cb7b97cb3e6cdcb13e38.js  dir_3311dca86b99cb7b97cb3e6cdcb13e38_dep.md5  dir_3a9a0319c66b456f548100e3837786c4.html  dir_3a9a0319c66b456f548100e3837786c4.js  (+80 more)
docs/doxygen/latex/: index.tex  (+3 more)
docs/html/: _application_8cpp_8o_8d_source.html  _application_8cpp_source.html  _application_8h_source.html  _assets_8cpp_source.html  _assets_8h_source.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _camera_8cpp_8o_8d_source.html  _camera_8cpp_source.html  _camera_8h_source.html  _component_8cpp_source.html  _component_8h_source.html  _component_factory_8h_source.html  _component_type_8h_source.html  _config_8h_source.html  _directional_light_component_8cpp_source.html  _directional_light_component_8h_source.html  _dock_u_i_8cpp_source.html  _dock_u_i_8h_source.html  _dynamic_exporting_macros_8h_source.html  _e_c_s_8cpp_source.html  _e_c_s_8h_source.html  _editor_camera_8cpp_source.html  _editor_camera_8h_source.html  _entity_8cpp_source.html  _entity_8h_source.html  _entry_point_8h_source.html  _error_8cpp_8o_8d_source.html  _error_8cpp_source.html  _error_8h_source.html  _file_dialogue_8cpp_source.html  _file_dialogue_8h_source.html  _file_menu_8cpp_source.html  _file_menu_8h_source.html  _frame_buffer_8cpp_8o_8d_source.html  _frame_buffer_8cpp_source.html  _frame_buffer_8h_source.html  _index_buffer_8cpp_8o_8d_source.html  _index_buffer_8cpp_source.html  _index_buffer_8h_source.html  (+601 more)
docs/latex/: _application_8cpp_8o_8d_source.tex  _application_8cpp_source.tex  _application_8h_source.tex  _assets_8cpp_source.tex  _assets_8h_source.tex  _c_make_c_compiler_id_8c_source.tex  _c_make_c_x_x_compiler_id_8cpp_source.tex  _camera_8cpp_8o_8d_source.tex  _camera_8cpp_source.tex  _camera_8h_source.tex  _component_8cpp_source.tex  _component_8h_source.tex  _component_factory_8h_source.tex  _component_type_8h_source.tex  _config_8h_source.tex  _directional_light_component_8h_source.tex  _dock_u_i_8cpp_source.tex  _dock_u_i_8h_source.tex  _dynamic_exporting_macros_8h_source.tex  _e_c_s_8cpp_source.tex  _e_c_s_8h_source.tex  _editor_camera_8cpp_source.tex  _editor_camera_8h_source.tex  _entity_8cpp_source.tex  _entity_8h_source.tex  _entry_point_8h_source.tex  _error_8cpp_8o_8d_source.tex  _error_8cpp_source.tex  _error_8h_source.tex  _file_dialogue_8h_source.tex  _file_menu_8cpp_source.tex  _file_menu_8h_source.tex  _frame_buffer_8cpp_8o_8d_source.tex  _frame_buffer_8cpp_source.tex  _frame_buffer_8h_source.tex  _index_buffer_8cpp_8o_8d_source.tex  _index_buffer_8cpp_source.tex  _index_buffer_8h_source.tex  _input_handler_8cpp_8o_8d_source.tex  _input_handler_8cpp_source.tex  (+197 more)
examples/examples2D/: marching_squares.cpp  renderer_2D_example.cpp
examples/examples3D/: CMakeLists.txt  bump_map.cpp  depth_map.cpp  ecs_test.cpp  instancing.cpp  marching_cube.cpp  suzanne_example.cpp
src/: CMakeLists.txt  Vivid.h
src/Editor/: Application.h  Window.cpp  Window.h
src/common/: Types.h  logger.cpp  logger.h
src/common/maths/: Vec.h  VectorHelper.h  VectorOperatorMixin.h
src/common/types/: OpenGLTypes.h  SingletonMixin.h  SmartPointers.h  Types.h
src/confs/: Config.h
src/core/components/: Component.h  TransformComponent.cpp  TransformComponent.h
src/core/ecs/: Component.cpp  Component.h  ComponentArray.cpp  ComponentArray.h  ComponentFactory.h  ComponentManager.h  ComponentType.h  ECS.cpp  ECS.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  System.h  SystemManager.h  SystemType.h
src/core/ecs/components/: TransformComponent.cpp  TransformComponent.h
src/core/ecs/components/light/: DirectionalLightComponent.cpp  DirectionalLightComponent.h  PointLight.cpp  PointLight.h  PointLightComponent.cpp  PointLightComponent.h
src/core/ecs/components/model/: Mesh.cpp  Mesh.h  ModelComponent.cpp  ModelComponent.h
src/core/ecs/systems/: RenderSystem.cpp  RenderSystem.h
src/core/os/: FileDialogue.cpp  FileDialogue.h
src/core/renderer/: FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.h  Mesh.h  PointLight.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
src/core/renderer/shapes/: Quad3d.cpp  Quad3d.h  Shape.h  Sphere.cpp
src/editor/: Application.cpp  Application.h  Camera.cpp  Camera.h  EntryPoint.h  RenderingInterface.h  Window.cpp  Window.h
src/editor/UI/: UI.cpp  UI.h  UIFlags.h
src/editor/assets/: Assets.cpp  Assets.h  assets.md
src/editor/camera/: Camera.h  EditorCamera.cpp  EditorCamera.h  OrthoCamera.cpp  OrthoCamera.h
src/editor/camera/movable/: EditorCamera.cpp  EditorCamera.h  MovableCamera.h  OrthoCamera.cpp  OrthoCamera.h
src/editor/gui/: DockUI.cpp  DockUI.h  SceneUI.cpp  SceneUI.h  UIFlags.cpp  UIFlags.h
src/editor/gui/configs/: DockUI.cpp
src/editor/gui/ecs/: SceneUI.cpp  SceneUI.h
src/editor/gui/menu/: FileMenu.cpp  FileMenu.h  MenuUI.cpp  MenuUI.h
src/editor/ui/: UI.cpp  UI.h
src/inputs/: InputHandler.cpp  InputHandler.h  KeyCode.h
src/renderer/: Camera.h  FrameBuffer.cpp  FrameBuffer.h  Mesh.cpp  Mesh.h  PointLight.h  Renderer.cpp  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/utils/: Error.cpp  Error.h  Timer.h
(+460 files in other folders)
